--- a/runtime/BUILD.gn
+++ b/runtime/BUILD.gn
@@ -72,7 +72,7 @@ source_set("runtime") {
     "//flutter/glue",
     "//flutter/lib/io",
     "//flutter/lib/ui",
-    "//skia",
+    "//flutter/skia",
     "//flutter/sky/engine/platform",
     "//lib/ftl",
     "//lib/tonic",
