--- a/shell/gpu/BUILD.gn
+++ b/shell/gpu/BUILD.gn
@@ -17,7 +17,7 @@ source_set("gpu") {
     "//flutter/flow",
     "//flutter/glue",
     "//flutter/shell/common",
-    "//skia",
+    "//flutter/skia",
     "//flutter/synchronization",
     "//lib/ftl",
   ]
