--- a/shell/testing/BUILD.gn
+++ b/shell/testing/BUILD.gn
@@ -16,7 +16,7 @@ source_set("testing") {
     "//base",
     "//flutter/common",
     "//flutter/shell/common",
-    "//skia",
+    "//flutter/skia",
     "//lib/ftl",
   ]
 }
