--- a/sky/engine/core/BUILD.gn
+++ b/sky/engine/core/BUILD.gn
@@ -36,7 +36,7 @@ static_library("core") {
     "//flutter/common",
     "//flutter/flow",
     "//flutter/glue",
-    "//skia",
+    "//flutter/skia",
     "//flutter/sky/engine/wtf",
     "//lib/ftl",
     "//lib/tonic",
