--- a/lib/snapshot/BUILD.gn
+++ b/lib/snapshot/BUILD.gn
@@ -5,6 +5,7 @@
 import("//flutter/lib/jni/dart_jni.gni")
 import("//flutter/lib/snapshot/toolchain.gni")
 import("//flutter/lib/ui/dart_ui.gni")
+import("//solarium/navigator/dart_navigator.gni")
 
 target_is_fuchsia = target_os == "fuchsia"
 
@@ -31,6 +32,14 @@ copy("generate_dart_jni") {
   ]
 }
 
+copy("generate_dart_navigator") {
+  sources = dart_navigator_files
+
+  outputs = [
+    "$bindings_output_dir/dart_navigator/{{source_file_part}}",
+  ]
+}
+
 action("generate_snapshot_bin") {
   if (target_is_fuchsia) {
     snapshot_dart = "snapshot_fuchsia.dart"
@@ -42,12 +51,14 @@ action("generate_snapshot_bin") {
     "//dart/runtime/bin:gen_snapshot($dart_host_toolchain)",
     ":generate_dart_ui",
     ":generate_dart_jni",
+    ":generate_dart_navigator",
   ]
   inputs = [
     "//dart/runtime/tools/create_snapshot_bin.py",
     snapshot_dart,
   ] + dart_ui_files
     + dart_jni_files
+    + dart_navigator_files
 
   vm_isolate_snapshot = "$target_gen_dir/vm_isolate_snapshot.bin"
   isolate_snapshot = "$target_gen_dir/isolate_snapshot.bin"
@@ -58,6 +69,7 @@ action("generate_snapshot_bin") {
 
   rebased_dart_ui_path = rebase_path(dart_ui_path)
   rebased_dart_jni_path = rebase_path(dart_jni_path)
+  rebased_dart_navigator_path = rebase_path(dart_navigator_path)
 
   gen_snapshot_dir =
       get_label_info("//dart/runtime/bin:gen_snapshot($dart_host_toolchain)",
@@ -79,6 +91,7 @@ action("generate_snapshot_bin") {
     target_os,
     "--url_mapping=dart:ui,$rebased_dart_ui_path",
     "--url_mapping=dart:jni,$rebased_dart_jni_path",
+    "--url_mapping=dart:navigator,$rebased_dart_navigator_path",
   ]
 
   if (target_is_fuchsia) {
