--- a/lib/snapshot/BUILD.gn
+++ b/lib/snapshot/BUILD.gn
@@ -85,7 +85,7 @@ action("generate_snapshot_bin") {
     rebase_path(snapshot_dart),
     "--vm_output_bin",
     rebase_path(vm_isolate_snapshot, root_build_dir),
-    "--output_bin",
+    "--isolate_output_bin",
     rebase_path(isolate_snapshot, root_build_dir),
     "--target_os",
     target_os,
