--- a/sky/engine/web/BUILD.gn
+++ b/sky/engine/web/BUILD.gn
@@ -21,6 +21,7 @@ source_set("web") {
   if (is_fuchsia) {
     deps += [ "//lib/mtl/tasks" ]
   } else {
-    deps += [ "//flutter/fml" ]
+#    deps += [ "//flutter/fml" ]
+    deps += [ "//base" ]
   }
 }
